   Version 0.64

-----------------------------------------------------------------------
 Version 0.74
 ============

 Released on 

 Total files count: 
 Total lines count: 
 maintainer/run-distcheck.sh: 

 New features and improvements:

   - ofaPeriodClose: save size and position of "ArchivingAccountsBalance" dialog box (todo #1516).
   - ofoTVAFormProperties: improve properties update.

 Bug fixes:

   - ofoBat: fix new record insertion.
   - ofoTVAForm: fix new record insertion.
   - ofoTVAFormProperties: fix new record creation.
   - ofoTVARecord: fix new record insertion.

 Other changes:

   - myIBin: has its own 'my-ibin-changed' signal (todo #1501).
   - mySettings: have an info message instead of debug when file doesn't exist.
   - ofo-entry-fec.{c,h}: removed files.

-----------------------------------------------------------------------
 Version 0.73
 ============

 Released on 2017-11-12

 Total files count:    849 files
 Total lines count: 587078 lines
 maintainer/run-distcheck.sh: real	7m13.079s

 New features and improvements:

   RECURRENT DB Model v10

   - Recurrent model: have creation user and timestamp (todo #1488).
   - Recurrent generation: let the user choose the generation mode.
   - Recurrent run: take a copy of model data at creation time.
   - Recurrent run: editable cells are now marked with a blue font color.

   VAT DB Model v10

   - VAT form: have creation user and timestamp (todo #1488).
   - VAT form properties: improve the responsiveness of the dialog (todo #1504).
   - VAT record: have creation user and timestamp (todo #1488).
   - VAT record: have operation generation user and timestamp.
   - VAT record: take a copy of form data at creation time.
   - VAT record treeview: have a correspondence indicator.

   CORE DB Model v38

   - ofoAccount: have creation user and timestamp (todo #1488).
   - ofoBat: have creation user and timestamp (todo #1488).
   - ofoClass: have creation user and timestamp (todo #1488).