@@ -372,9 +372,6 @@
 
 1514 2017-11-16 VAT: generating operations does not work the first time after compute
 
-1515 2017-11-16 VAT: RecordProperties
-                the label "<n> operations have been generated" is not well centered
-
 1517
 
 -----------------------------------------------------------------------
@@ -1366,6 +1363,10 @@
 1506 2017-11- 4 VAT form page: generate from selected button should only
                 be enabled when currently selected form is enabled
      2017-11- 6 fixed by unselecting all when running the properties
+
+1515 2017-11-16 VAT: RecordProperties
+                the label "<n> operations have been generated" is not well centered
+     2017-11-16 done
 
 1516 2017-11-16 on period closing, save the position of the "archiving account balances" dialog box
      2017-11-16 done
