@@ -330,30 +330,87 @@
                           <object class="GtkGrid">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="margin_left">8</property>
+                            <property name="halign">center</property>
+                            <property name="margin_left">2</property>
                             <property name="margin_right">2</property>
                             <property name="margin_top">2</property>
-                            <property name="margin_bottom">2</property>
+                            <property name="margin_bottom">8</property>
+                            <property name="hexpand">True</property>
                             <property name="row_spacing">2</property>
-                            <property name="column_spacing">4</property>
+                            <property name="column_spacing">2</property>
+                            <property name="column_homogeneous">True</property>
                             <child>
-                              <object class="GtkLabel" id="p1-dope-prompt">
+                              <object class="GtkButton" id="generate-btn">
+                                <property name="label" translatable="yes">_Generate operations</property>
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">_Operation date :</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
                                 <property name="use_underline">True</property>
-                                <property name="xalign">1</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
-                                <property name="top_attach">0</property>
+                                <property name="top_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkButton" id="p1-view-btn">
+                                <property name="label" translatable="yes">_View operations...</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="use_underline">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="top_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkButton" id="p1-delete-btn">
+                                <property name="label" translatable="yes">_Delete operations...</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="use_underline">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">2</property>
+                                <property name="top_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="p1-generated-label">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="halign">center</property>
+                                <property name="xalign">0</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">1</property>
+                                <property name="width">3</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkGrid">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="halign">center</property>
+                                <property name="row_spacing">2</property>
                                 <property name="column_spacing">4</property>
+                                <child>
+                                  <object class="GtkLabel" id="p1-dope-prompt">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="label" translatable="yes">_Operation date :</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="xalign">1</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">0</property>
+                                    <property name="top_attach">0</property>
+                                  </packing>
+                                </child>
                                 <child>
                                   <object class="GtkEntry" id="p1-dope-entry">
                                     <property name="visible">True</property>
@@ -363,7 +420,7 @@
                                     <property name="caps_lock_warning">False</property>
                                   </object>
                                   <packing>
-                                    <property name="left_attach">0</property>
+                                    <property name="left_attach">1</property>
                                     <property name="top_attach">0</property>
                                   </packing>
                                 </child>
@@ -371,71 +428,8 @@
                                   <object class="GtkLabel" id="p1-dope-label">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
+                                    <property name="width_chars">15</property>
                                     <property name="xalign">0</property>
-                                  </object>
-                                  <packing>
-                                    <property name="left_attach">1</property>
-                                    <property name="top_attach">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <object class="GtkLabel">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes"> </property>
-                                  </object>
-                                  <packing>
-                                    <property name="left_attach">2</property>
-                                    <property name="top_attach">0</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="top_attach">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkGrid">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="halign">center</property>
-                                <property name="hexpand">True</property>
-                                <property name="column_spacing">2</property>
-                                <property name="column_homogeneous">True</property>
-                                <child>
-                                  <object class="GtkButton" id="generate-btn">
-                                    <property name="label" translatable="yes">_Generate operations</property>
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="receives_default">True</property>
-                                    <property name="use_underline">True</property>
-                                  </object>
-                                  <packing>
-                                    <property name="left_attach">0</property>
-                                    <property name="top_attach">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <object class="GtkButton" id="p1-view-btn">
-                                    <property name="label" translatable="yes">_View operations...</property>
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="receives_default">True</property>
-                                    <property name="use_underline">True</property>
-                                  </object>
-                                  <packing>
-                                    <property name="left_attach">1</property>
-                                    <property name="top_attach">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <object class="GtkButton" id="p1-delete-btn">
-                                    <property name="label" translatable="yes">_Delete operations...</property>
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="receives_default">True</property>
-                                    <property name="use_underline">True</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">2</property>
@@ -445,23 +439,9 @@
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
-                                <property name="top_attach">2</property>
-                                <property name="width">2</property>
+                                <property name="top_attach">0</property>
+                                <property name="width">3</property>
                               </packing>
-                            </child>
-                            <child>
-                              <object class="GtkLabel" id="p1-generated-label">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="xalign">0</property>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="top_attach">1</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <placeholder/>
                             </child>
                           </object>
                         </child>
@@ -799,14 +779,5 @@
       <action-widget response="-5">ok-btn</action-widget>
     </action-widgets>
   </template>
-  <object class="GtkSizeGroup" id="p1-hcol0-group">
-    <widgets>
-      <widget name="p1-mnemo-label"/>
-      <widget name="p1-label-prompt"/>
-      <widget name="p1-begin-label"/>
-      <widget name="p1-has-corresp-prompt"/>
-      <widget name="p1-valid-prompt"/>
-      <widget name="p1-dope-prompt"/>
-    </widgets>
-  </object>
+  <object class="GtkSizeGroup" id="p1-hcol0-group"/>
 </interface>
